# HunTianDB

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_EN.md  SECURITY.md  benchmark_report.md  dist-workspace.toml  docker-compose.yml  plan-dist-manifest.json
.gitcode/ISSUE_TEMPLATE/: performance_issue.md
.gitcode/workflows/: benchmark.yml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  deploy-landing.yml  deploy.yml  deploy_to_aliyun.yml  deploy_to_aws.yml  deploy_to_dockerhub.yml  release.yml  spam-filter.yml
.trae/rules/: git-commit-message.md
backend/: Cargo.toml  Dockerfile  build.rs
backend/src/: config.rs  error.rs  lib.rs  main.rs  models.rs
backend/src/auth/: encryption.rs  jwt.rs  mod.rs  mtls.rs  rbac.rs  scram.rs
backend/src/callback/: executor.rs  mod.rs  registry.rs
backend/src/metrics/: logger.rs  mod.rs  prometheus.rs
backend/src/query/: executor.rs  mod.rs  optimizer.rs  parser.rs  planner.rs  validator.rs
backend/src/server/: connection.rs  database.rs  listener.rs  mod.rs  postgres_protocol.rs  rest_handler.rs  slow_query.rs
backend/src/snapshot/: forensics.rs  manager.rs  mod.rs  registry.rs
backend/src/storage/: bloom_filter.rs  codec.rs  mod.rs  parquet_reader.rs  parquet_writer.rs  partition.rs  ring_buffer.rs  wal.rs
backend/src/wal/: checkpoint.rs  checksum.rs  mod.rs
backend/tests/: benchmark.rs  integration_test.rs
benchmark/: benchmark.rs  run_bench.py
benchmark/reports/: bench_1779246736.md  bench_1779247598.md  bench_1779248796.md  bench_1779256249.md  bench_1779259126.md  benchmark_100k.md  benchmark_5k.md  benchmark_wal.md  comprehensive_1779236914.md  crud_bench_1779201702.md  pg_wire_bench_1779202270.md  pg_wire_bench_1779202366.md  pg_wire_bench_1779203217.md  pg_wire_bench_1779203390.md  pg_wire_bench_1779203508.md  pg_wire_bench_1779203595.md  pg_wire_bench_1779203708.md  pg_wire_bench_1779204317.md  pg_wire_bench_1779206853.md  pg_wire_bench_1779207599.md  pg_wire_bench_1779208341.md
docs/en/: README.md  USER_MANAGEMENT.md
docs/zh/: ARCHITECTURE.md  README.md  SECURITY.md  USER_MANAGEMENT.md
examples/: README.md
examples/c/: create_table.c  data_insert_totable.c  query_data.c  user_management.c
examples/cangjie/: create_table.cj  data_insert_totable.cj  query_data.cj  user_management.cj
examples/erlang/: create_table.erl  data_insert_totable.erl  query_data.erl  user_management.erl
examples/go/: create_table.go  data_insert_totable.go  main.go  query_data.go  user_management.go
examples/haskell/: create_table.hs  data_insert_totable.hs  query_data.hs  user_management.hs
examples/python/: create_table.py  data_insert_totable.py  query_data.py  user_management.py
examples/rust/: create_table.rs  data_insert_totable.rs  main.rs  query_data.rs  user_management.rs
examples/typescript/: create_table.ts  data_insert_totable.ts  index.ts  query_data.ts  user_management.ts
frontend/: Readme.md  Readme_EN.md  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  client.ts  (+1 more)
landing/: dist  nuxt.config.ts  package.json
landing/composables/: useI18n.ts  useVersion.ts
landing/locales/: docs-en.ts  docs-zh.ts  en.ts  zh.ts
landing/pages/: docs.vue  index.vue
landing/public/: llm.txt
scripts/: generate-certs.sh  init-db.sh
tests/: crash_safety.sh  prometheus_metrics.sh
(+20 files in other folders)
