[workspace]
resolver = "2"
members = ["backend"]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
authors = ["钟智强"]
repository = "https://github.com/ctkqiang/HuntianDB"
homepage = "https://www.huntiandb.tech/"


# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
